*** Attention *** Due to limitations from other projects I am currently involved in, the `minSdk` must remain at `21` and cannot be upgraded for now. This also indirectly affects some of the open-source libraries used in this project, preventing them from being updated to their latest versions.
1. Upgrade AGP to 9.0.1
2. Upgrade Kotlin to 2.3.10
3. Upgrade Gradle to 9.4.0
4. Upgrade all dependencies to the latest version as possible as it can.